slots Ver 0.5 (nie działa kręcenie)